infrastructure/gitops/kustomize/overlays/prod/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-private
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - prod-app.dwl.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: frontend
          port: 80
          weight: 1
      timeouts:
        request: 60s
        backendRequest: 60s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: frontend-backend-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: frontend-private
  timeout:
    http:
      requestTimeout: 60s
      connectionIdleTimeout: 60s
  compression:
    - type: Gzip
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: frontend-security-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: frontend-private
  cors:
    allowOrigins:
      - "*"
    allowMethods: [GET, POST, OPTIONS, HEAD]
    allowHeaders: ["*"]
    exposeHeaders: ["*"]
    maxAge: 1800s
